--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
             bottom: 20px;
             right: 180px;
         }
+        .model-button {
+            position: absolute;
+            bottom: 0px;
+            background-color: #fff;
+            width: 60px;
+            height: 60px;
+            margin: 15px;
+            border-radius: 100%;
+            -moz-box-shadow: 0px 0px 10px #222222;
+            -webkit-box-shadow: 0px 0px 10px #222222;
+            box-shadow: 0px 0px 10px #222222;
+            -webkit-transition: -wekbit-box-shadow 1s, background-color 1s; 
+            transition: box-shadow 1s, background-color 1s; 
+        }
+
+        .model-button:hover, model-button.selected {
+            cursor: pointer;
+            background-color: #fff;
+            -moz-box-shadow: 0px 0px 15px #0099ff;
+            -webkit-box-shadow: 0px 0px 15px #0099ff;
+            box-shadow: 0px 0px 15px #0099ff;
+            -webkit-transition: -wekbit-box-shadow 1s, background-color 1s; 
+            transition: box-shadow 1s, background-color 1s; 
+        }
+
     </style>
 </head>
 <body>
